<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">

<!--*********** Title **********************************************-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/fragrant_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="26sp"
            android:textStyle="bold" />

<!--************** Queston 1 ****************************************-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/four_notes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/question1"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/question1_answer1_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question1_answer2_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question1_answer3_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question1_answer4_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_answer4"
                android:textSize="16sp" />
        </RadioGroup>

<!--*********** Question 2 ******************************************-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:padding="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/amouage_bottle_silhouette" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/question2"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/question2_answer_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/question2_hint"
            android:inputType="textCapWords"
            android:textColor="@color/primaryText" />

<!--*********** Question 3 ******************************************-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/whale" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/question3"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/question3_answer1_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question3_answer2_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question3_answer3_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question3_answer4_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_answer4"
                android:textSize="16sp" />
        </RadioGroup>

<!--*********** Question 4 ******************************************-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/resin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/question4"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question4_answer1_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_answer1"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/question4_answer2_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_answer2"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/question4_answer3_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_answer3"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/question4_answer4_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4_answer4"
                android:textSize="16sp"/>
        </LinearLayout>

<!--*********** Question 5 ******************************************-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/creed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/question5"
            android:textAlignment="center"
            android:textColor="@color/titleText"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp">

            <RadioButton
                android:id="@+id/question5_answer1_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question5_answer2_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question5_answer3_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question5_answer4_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_answer4"
                android:textSize="16sp" />
        </RadioGroup>

<!--*****************************************************************-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/submit_text"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="26sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:onClick="submitAnswers"
            android:text="@string/submit_button" />

<!--*****************************************************************-->
    </LinearLayout>
</ScrollView>